--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>d3-sandbox</title>
   </head>
   <body>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/bar-chart/bar-chart.js"></script>
+    <script type="module" src="/src/scatter-plot/scatter-plot.js"></script>
   </body>
 </html>
