--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <script type="module" src="/src/bar-chart/bar-chart.js"></script>
     <script type="module" src="/src/scatter-plot/scatter-plot.js"></script>
+    <script type="module" src="/src/linear-chart/linear-plot.js"></script>
   </body>
 </html>
