--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script type="module" src="/src/bar-chart/bar-chart.js"></script>
     <script type="module" src="/src/scatter-plot/scatter-plot.js"></script>
     <script type="module" src="/src/linear-chart/linear-plot.js"></script>
+    <script type="module" src="/src/area-chart/area-chart.js"></script>
   </body>
 </html>
