--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <script type="module" src="/src/scatter-plot/scatter-plot.js"></script>
     <script type="module" src="/src/linear-chart/linear-plot.js"></script>
     <script type="module" src="/src/area-chart/area-chart.js"></script>
+    <script type="module" src="/src/update-pattern/update-pattern.js"></script>
   </body>
 </html>
