--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script type="module" src="/src/linear-chart/linear-plot.js"></script>
     <script type="module" src="/src/area-chart/area-chart.js"></script>
     <script type="module" src="/src/update-pattern/update-pattern.js"></script>
+    <script type="module" src="/src/nested-objects-update-pattern/update-pattern.js"></script>
   </body>
 </html>
